    running Oracle Berkeley DB version 6.2 or newer.

  * Support HEAP access method if you are linking against Oracle Berkeley DB
    5.3 or newer.

    - Implement, test and document "DB.get_heapsize()", "DB.set_heapsize()",
      "DB.get_heap_regionsize()" and "DB.set_heap_regionsize()".

    - Export exception "DBHeapFull" (from error "DB_HEAP_FULL").

  * WARNING - BREAKING CHANGE: Add "dbtype" member in "DBObject" object in the
    C API. Increase C API version. This change has ripple effect in the code.

  * WARNING - BREAKING CHANGE: "primaryDBType" member in "DBObject" object in
    the C API is now type "DBTYPE". Increase C API version. This change has
    ripple effect in the code.

  * Now "DB.get_type()" can be called anytime and it doesn't raise an exception
    if called before the database is open. If the database type is not known,
    "DB_UNKNOWN" is returned. This is a deviation from the Oracle Berkeley DB C
    API.

  * WARNING - BREAKING CHANGE: "DB.type()" method is dropped. It was never
    documented. Use "DB.get_type()".

  * "DB.stats()" returns new keys in the dictionary:

    - Hash access method: Added "metaflags" (always) and "ext_files" (if
      linked against Oracle Berkeley DB 6.2 or newer).

18.1.1 - 2020-12-01:
  * If you try to install this library in an unsupported Python
    environment, instruct the user about how to install legacy "bsddb3"
    library.

  * Expose DBSite object in the C API. Increase C API version.

  * WARNING - BREAKING CHANGE: Ancient release 4.2.8 added weakref support to
    all bsddb.db objects, but from now on this feature requires at least Python
    3.9 because I have migrated from static types to heap types. Let me know if
    this is a problem for you. I could, for example, keep the old types in
    Python < 3.9, if needed.

    Details:

    Py_tp_dictoffset / Py_tp_finalize are unsettable in stable API
    https://bugs.python.org/issue38140
